tests/ui/threads-safety.stderr
error[E0277]: `dyn Stream<Item = i32>` cannot be sent between threads safely
  --> tests/ui/threads-safety.rs:27:17
   |
27 |     assert_send(boxed_local()); //~ ERROR `dyn futures_core::stream::Stream<Item = i32>` cannot be sent between threads safely
   |     ----------- ^^^^^^^^^^^^^ `dyn Stream<Item = i32>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `dyn Stream<Item = i32>`
   = note: required for `Unique<dyn Stream<Item = i32>>` to implement `Send`
note: required because it appears within the type `Box<dyn Stream<Item = i32>>`
  --> $RUST/alloc/src/boxed.rs
   |
   | pub struct Box<
   |            ^^^
note: required because it appears within the type `Pin<Box<dyn Stream<Item = i32>>>`
  --> $RUST/core/src/pin.rs
   |
   | pub struct Pin<P> {
   |            ^^^
note: required by a bound in `assert_send`
  --> tests/ui/threads-safety.rs:5:19
   |
5  | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`
